Updates from Overleaf

--- a/00_config/packages.tex
+++ b/00_config/packages.tex
@@ -36,8 +36,8 @@
 % ===== LITERATURVERZEICHNIS =====
 \usepackage[
     backend=biber,
-    %style=authoryear-icomp,  
-    style=numeric, 
+    style=authoryear-icomp,  
+    %style=numeric, 
     maxbibnames=4,
     maxcitenames=2,
     autocite=footnote,
