--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -189,7 +189,7 @@ Bevor die inhaltliche Planungsarbeit beginnt, muss das in Phase 1 ermittelte Ges
 
 Anders als bei einer klassischen Kostenschätzung nach DIN 276 (Gewerke), erfolgt die Allokation im TVD systemorientiert auf die zu bildenden Cluster (vgl. Kap. 4.4.3). Das Budget wird typischerweise in einem Gegenstromverfahren verteilt:
 \begin{itemize}
-    \item \textbf{Top-Down:} Die Projektsteuerung gibt basierend auf Benchmarks grobe Zielwerte für die Cluster vor (z.B. "Zielwert Fassade: 2,5 Mio. €").
+    \item \textbf{Top-Down:} Die Projektsteuerung gibt basierend auf Benchmarks grobe Zielwerte für die Cluster vor (z.B. Zielwert Fassade: 2,5 Mio. €).
     \item \textbf{Bottom-Up:} Die Cluster-Teams prüfen diese Werte auf Plausibilität und melden Rückbedarf an.
 \end{itemize}
 Ein essenzieller Bestandteil der Allokation ist das "Contingency Management". Das Budget wird nicht zu 100\% auf die Cluster verteilt. Ein Teil verbleibt als zentraler Puffer ("Project Contingency") beim Bauherrn/Steuerungsteam, um unvorhergesehene Risiken abzudecken, ohne die Target Cost zu erhöhen.
