--- a/02_mainmatter/ch5_Transfer.tex
+++ b/02_mainmatter/ch5_Transfer.tex
@@ -1,9 +1,39 @@
 \chapter{Transferleitfaden}
 \label{ch:transfer}
 
-\section{Abschnitt}
-\label{sec: 6}
+Einleitung zu Kapitel 5 
+
+kurze Wiederholung/Zusammenfassung der in Kapitel 4 erarbeiteten/benannten Problemstellen
+
+gezielte Auswahl relevanter Probleme für die weitere Diskussion
+Begründung der Auswahl: warum habe ich diese Probleme gewählt?!
+
+\section{Problem 1}
+\label{sec:6.1}
 
 
+
+\section{Problem 2}
+\label{sec:6.2}
+
+
+
+
+\section{Problem 3}
+\label{sec:6.3}
+
+
+
+\section{Problem 4}
+\label{sec:6.4}
+
+
+
+
+\section{Problem 5}
+\label{sec:6.5}
+
+
+ggf. mit eigenem Abschnitt: ZUsammenfassung der Ergebnisse für Übergeordnetes Bild oder sogar Lösung
 
 \clearpage
