Updates from Overleaf

--- a/01_frontmatter/acronyms.tex
+++ b/01_frontmatter/acronyms.tex
@@ -7,6 +7,7 @@
     \acro{AHO}{Ausschuss der Verbände und Kammern der Ingenieure und Architekten für die Honorarordnung}
     \acro{BIM}{Building Information Modeling}
     \acro{CoS}{Conditions of Satisfaction}
+    \acro{GLCI}{German Lean Construction Institute}
     \acro{IPA}{Integrierte Projektabwicklung}
     \acro{IPD}{Integrated Project Delivery}
     \acro{LC}{Lean Construction}
