--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -4,14 +4,29 @@
 
 \section{Konventionelle Projektabwicklung in der deutschen Baupraxis}
 \label{sec: 2.1}
-Ziel: Der Leser soll die Struktur, die Rollenverteilung und die prozessualen Schwachstellen der traditionellen Projektabwicklung verstehen. Dieses Kapitel etabliert das "Problem", für das die Arbeit eine Lösung präsentiert.
+% Ziel: Der Leser soll die Struktur, die Rollenverteilung und die prozessualen Schwachstellen der traditionellen Projektabwicklung verstehen. Dieses Kapitel etabliert das "Problem", für das die Arbeit eine Lösung präsentiert.
 
-Zielsetzung: Den Leser in das Thema einführen und die prägenden Regelwerke der konventionellen Projektabwicklung in Deutschland benennen.\\
-- Feststellung: Die deutsche Baupraxis wird maßgeblich durch HOAI und VOB geformt.\\
-- Grundprinzip herausarbeiten: Strikte Trennung von Planungs- und Ausführungsleistungen.\\
-- Charakterisierung des Modells: Sequenzieller Ablauf in Phasen.\\
+% Zielsetzung: Den Leser in das Thema einführen und die prägenden Regelwerke der konventionellen Projektabwicklung in Deutschland benennen.\\
+% - Feststellung: Die deutsche Baupraxis wird maßgeblich durch HOAI und VOB geformt.\\
+% - Grundprinzip herausarbeiten: Strikte Trennung von Planungs- und Ausführungsleistungen.\\
+% - Charakterisierung des Modells: Sequenzieller Ablauf in Phasen.\\
 
+\subsection{Das lineare Prozessmodell der HOAI}
+\label{sec:2.1.1}
 
+In der deutschen Baupraxis wird der Projektablauf primär durch die Leistungsphasen der Honorarordnung für Architekten und Ingenieure (HOAI) strukturiert. Dieses Modell folgt der Logik der sequenziellen Abwicklung, die im internationalen Kontext als \textit{Design-Bid-Build} (DBB) bezeichnet wird \autocite[vgl.]{Habib2020}. Kennzeichnend für diese Phasenlogik ist die Annahme, dass ein Projekt durch das sukzessive Abarbeiten vordefinierter Meilensteine – von der Grundlagenermittlung bis zur Objektbetreuung – erfolgreich gesteuert werden kann.
+
+Diese Linearität führt jedoch zu einer massiven \textbf{prozessualen Fragmentierung}. In der Literatur wird dieses Vorgehen oft als \enquote{Wasserfall-Modell} kritisiert, bei dem Informationen lediglich einseitig von einer Phase in die nächste weitergegeben werden \autocite[siehe]{Habib2020}. Für eine effiziente Kosten- und Wertsteuerung ergeben sich daraus drei zentrale Defizite:
+
+\begin{itemize}
+    \item \textbf{Das Wissens-Paradoxon (Knowledge Gap):} Die HOAI sieht vor, dass die Planung (LPH 1–4) weitestgehend abgeschlossen sein muss, bevor die ausführenden Unternehmen in den Leistungsphasen 6 und 7 (Vorbereitung und Mitwirkung bei der Vergabe) eingebunden werden \autocite[vgl.]{Habib2020}. Zu diesem Zeitpunkt sind Schätzungen zufolge bereits ca. 80\,\% der Lebenszykluskosten eines Gebäudes durch Entwurfsentscheidungen fixiert \autocite[siehe]{Ballard2025}. Das spezifische Fertigungs- und Marktwissen derer, die das Gebäude letztlich realisieren, bleibt somit in der Phase der größten Beeinflussbarkeit ungenutzt.
+    
+    \item \textbf{Reaktive statt proaktive Steuerung:} Die Kostenermittlungen erfolgen im konventionellen Modell oft \enquote{post-mortem}. Eine Kostenberechnung am Ende der Entwurfsplanung (LPH 3) dient häufig nur der Dokumentation des Status Quo, statt als aktives Design-Werkzeug zu fungieren. Weichen die Kosten vom Budget ab, führt dies in der linearen Logik unweigerlich zu aufwendigen und teuren Umplanungen (\textit{Rework}), da der Prozess nicht auf iterative Feedbackschleifen ausgelegt ist \autocite[vgl.]{Ballard2025}.
+    
+    \item \textbf{Schnittstellenverluste und mangelnde Baubarkeit:} Da die Planer in der Entwurfsphase keine Kenntnis über die spezifischen Bauverfahren oder Subunternehmerketten der späteren Auftragnehmer haben, entstehen abstrakte Planungen. Diese müssen in der Ausführungsphase häufig korrigiert werden, was zu Zeitverlusten und Kostensteigerungen führt \autocite[vgl.]{Habib2020}.
+\end{itemize}
+
+Zusammenfassend lässt sich festhalten, dass die Phasenlogik der HOAI ein \textbf{Steuerungsdefizit} zementiert: Sie erzwingt weitreichende Entscheidungen zu einem Zeitpunkt, an dem das Wissen über deren Konsequenzen minimal ist, und verhindert Korrekturen zu einem Zeitpunkt, an dem sie noch kostengünstig möglich wären \autocite[Hier ggf. weitere Quelle zu Projektmanagement-Grundlagen einfügen]{...}. Dieses strukturelle Problem bildet die wesentliche Motivation für den Einsatz integrativer Ansätze wie dem Target Value Design, um die Trennung von Planung und Bau zu überwinden.
 
 \subsection{Das Prozessmodell - HOAI Leistungsphasen}
 \label{sec: 2.1.1}
@@ -55,20 +70,24 @@ Zielsetzung: Die negativen, systemischen Folgen der beschriebenen Struktur klar 
 \section{Integrierte Projektabwicklungsmodelle als alternativer Ansatz}
 \label{sec: 2.2}
 
+Die im vorangegangenen Abschnitt aufgezeigten Schwachstellen der konventionellen Projektabwicklung – insbesondere die organisatorische Fragmentierung und die daraus resultierenden Effizienzverluste – sind kein isoliertes Problem der deutschen Bauwirtschaft. Historisch betrachtet lassen sich Parallelen zur stationären Industrie ziehen, wo ähnliche Herausforderungen zur Entwicklung der Lean-Philosophie führten.
 
 \subsection{Lean-Management als Wegbereiter kollaborativer Modelle}
 \label{sec:2.2.1}
 
-Die im vorangegangenen Abschnitt aufgezeigten Schwachstellen der konventionellen Projektabwicklung – insbesondere die organisatorische Fragmentierung und die daraus resultierenden Effizienzverluste – sind kein isoliertes Problem der deutschen Bauwirtschaft. Historisch betrachtet lassen sich Parallelen zur stationären Industrie ziehen, wo ähnliche Herausforderungen zur Entwicklung der Lean-Philosophie führten.
-
 Der Ursprung dieses Denkansatzes liegt in der japanischen Automobilindustrie der Nachkriegszeit. Da Japan, anders als die USA, kaum über natürliche Ressourcen verfügte und der Inlandsmarkt klein war, konnte Toyota das amerikanische Modell der Massenproduktion (Fordismus) mit seinen großen Lagerbeständen nicht kopieren. Aus dieser Not heraus entwickelte Taiichi Ohno das Toyota-Produktionssystem (TPS). Sein Kernziel war die radikale Eliminierung jeglicher Verschwendung (\textit{Muda}) durch eine konsequente Fluss-Orientierung der Produktion.\autocite[vgl. S. 33]{ohno_toyota-produktionssystem_2013}
 
-Lange Zeit galt die Übertragbarkeit dieser Prinzipien auf das Bauwesen als schwierig, da Bauprojekte als Unikate mit stationärer Fertigung verstanden wurden. Dieser theoretische Konflikt wurde 1992 durch Lauri Koskela aufgelöst. In seinem wegweisenden Report \textit{Application of the New Production Philosophy to Construction} legte er dar, dass die Bauproduktion nicht nur als Transformation von Inputs zu Outputs (Material zu Bauwerk) verstanden werden darf. Vielmehr muss sie auch unter den Aspekten des „Flusses“ (Flow) und der „Wertschöpfung“ (Value) betrachtet werden.\autocite[vgl. S. 15]{koskela_application_1992} Während die Transformation in der Bauwirtschaft oft effizient ist, liegen im „Fluss“ – also den Übergängen zwischen Gewerken und Planungsphasen – massive Anteile an nicht-wertschöpfenden Tätigkeiten wie Warten oder Nacharbeiten.\autocite[vgl. S. 16]{haghsheno_lean_2020}
+Lange Zeit galt die Übertragbarkeit dieser Prinzipien auf das Bauwesen als schwierig, da Bauprojekte als Unikate mit stationärer Fertigung verstanden wurden. Dieser theoretische Konflikt wurde 1992 durch Lauri Koskela aufgelöst. In seinem wegweisenden Report \textit{Application of the New Production Philosophy to Construction} legte er dar, dass die Bauproduktion nicht nur als Transformation von Inputs zu Outputs (Material zu Bauwerk) verstanden werden darf. Vielmehr muss sie auch unter den Aspekten des „Flusses“ (Flow) und der „Wertschöpfung“ (Value) betrachtet werden.\autocite[vgl. S. 15]{koskela_application_1992} Während die Transformation in der Bauwirtschaft oft effizient ist, liegen im „Fluss“ – also den Übergängen zwischen Gewerken und Planungsphasen – massive Anteile an nicht-wertschöpfenden Tätigkeiten wie Warten oder Nacharbeiten.\autocite[vgl. S. 16]{haghsheno_lean_2019}
 
 Die Etablierung von \textit{Lean Construction} führte zur Entwicklung diverser Methoden (wie dem Last Planner System), um diesen Prozessfluss zu stabilisieren. In der Praxis zeigte sich jedoch eine systemische Grenze: Die Optimierung des Gesamtprozesses (Flow) steht oft im Widerspruch zu den lokalen Optimierungsinteressen einzelner Akteure, die durch bilaterale Verträge und reine Einheitspreisvergütung motiviert sind.\autocite[vgl. S. 12]{becker_integrierte_2022} Solange Verträge die Trennung fördern, können Lean-Methoden ihre volle Wirkung nicht entfalten.
 
-Die historische Antwort auf dieses Dilemma lieferte nicht die Bauindustrie, sondern der Offshore-Sektor. In den 1990er Jahren stand British Petroleum (BP) vor der Herausforderung, das Ölfeld „Andrew“ in der Nordsee zu erschließen. Mit konventionellen Verträgen waren die Kosten zu hoch, um das Projekt wirtschaftlich durchzuführen. BP initiierte daher einen radikalen Modellwechsel: Anstatt Risiken auf Auftragnehmer abzuwälzen, wurde eine Allianz gebildet, in der alle Partner am finanziellen Erfolg oder Misserfolg (Pain-Share/Gain-Share) beteiligt waren.\autocite[vgl. S. 2]{ross_introduction_2000} Dieses als \textit{Project Alliancing} bekannt gewordene Modell bewies, dass die vertragliche Integration der Schlüssel zur Kostenreduktion ist, und bildet das historische Fundament der heutigen Integrierten Projektabwicklung (\ac{IPA}).
+Die historische Antwort auf dieses Dilemma lieferte nicht die Bauindustrie, sondern der Offshore-Sektor. In den 1990er Jahren stand British Petroleum (BP) vor der Herausforderung, das Ölfeld „Andrew“ in der Nordsee zu erschließen. Mit konventionellen Verträgen waren die Kosten zu hoch, um das Projekt wirtschaftlich durchzuführen. BP initiierte daher einen radikalen Modellwechsel: Anstatt Risiken auf Auftragnehmer abzuwälzen, wurde eine Allianz gebildet, in der alle Partner am finanziellen Erfolg oder Misserfolg (Pain-Share/Gain-Share) beteiligt waren.\autocite[vgl. S. 2]{ross_introduction_2000} Dieses als \textit{Project Alliancing} bekannt gewordene Modell bewies, dass die vertragliche Integration der Schlüssel zur Kostenreduktion ist.
 
+Der Erfolg des Andrew-Projekts blieb nicht unbeachtet. Insbesondere in Australien etablierte sich das Modell unter dem Begriff \textit{Project Alliancing} (PA) schnell als Standard für komplexe öffentliche Infrastrukturprojekte.\autocite[vgl. S. 1]{ross_introduction_2000} Inspiriert durch die australischen Erfahrungen adaptierte die US-amerikanische Bauwirtschaft, getrieben durch private Bauherren im Gesundheitswesen wie Sutter Health, diese Prinzipien für den Hochbau. Dort prägte das American Institute of Architects (AIA) im Jahr 2007 den Begriff \textit{Integrated Project Delivery} (IPD) und definierte ihn erstmals vertraglich.\autocite[vgl.]{becker_integrierte_2022}\, \autocite[vgl.]{AIA_2007__integrated}
+
+Im deutschsprachigen Raum hat sich für diesen Ansatz der Begriff \textbf{Integrierte Projektabwicklung (IPA)} etabliert. Hierbei handelt es sich um die direkte Entsprechung des angloamerikanischen IPD-Modells. IPA ist folglich keine Neuentwicklung, sondern beschreibt die Anwendung derselben kollaborativen Prinzipien und Vertragsstrukturen im Kontext der deutschen Bauwirtschaft.\autocite[vgl. S. 28]{haghsheno_lean_2019}
+
+\clearpage
 
 
 
@@ -77,13 +96,77 @@ Die historische Antwort auf dieses Dilemma lieferte nicht die Bauindustrie, sond
 \subsection{Prinzipien und Merkmale der Integrierten Projektabwicklung}
 \label{sec:2.2.2}
 
-IPA als ist das organisatorische und vertragliche "Betriebssystem", um die Lean-Philosophie in Bauprojekten praktisch umzusetzen.\\
+Da der Begriff der Integrierten Projektabwicklung in Deutschland – anders als die VOB-basierten Modelle – nicht gesetzlich definiert ist, erfordert die wissenschaftliche Einordnung eine klare Abgrenzung anhand von branchenweit akzeptierten Merkmalen. Das \ac{GLCI} definiert IPA hierbei nicht nur als Vertragsart, sondern als ein ganzheitliches Projektabwicklungsmodell, das vertragliche, kulturelle und ökonomische Aspekte in einem einzigen System integriert.\autocite[vgl. S. 28]{haghsheno_lean_2019}
 
-Schlüsseleigenschaften und IPA-Charakteristika:\\
-- Frühzeitige Integration aller Schlüsselpartner (Planer und Ausführende) von Beginn an.\\
-Ein Mehrparteienvertrag, der alle Partner an einen Tisch bindet.\\
-Ein gemeinsames Risikomanagement (Chancen-/Risikopool).\\
-Eine kollaborative Kultur und gemeinsame Entscheidungsfindung.\\
+Zur Veranschaulichung dieser Systematik hat sich in der deutschsprachigen Literatur das Bild des „Hauses der IPA“ etabliert. Dieses Modell visualisiert das Zusammenspiel der verschiedenen Ebenen:\autocite[vgl. S. 29]{haghsheno_lean_2019}
+\begin{itemize}
+    \item Das \textbf{Fundament} bildet der Mehrparteienvertrag, der alle Schlüsselakteure rechtlich bindet.
+    \item Die \textbf{Säulen} bestehen aus dem gemeinsamen Risikomanagement (ökonomische Anreize) und der kooperativen Zusammenarbeit (Kultur und Methoden).
+    \item Das \textbf{Dach} symbolisiert die gemeinsamen Projektziele („Best for Project“), die über den Einzelinteressen stehen.
+\end{itemize}
+
+Um dieses Modell in der Praxis greifbar und abgrenzbar zu machen – insbesondere gegenüber reinen „Partnering“-Modellen, die oft unverbindlich bleiben –, hat das IPA-Zentrum im Jahr 2022 eine präzisere Definition erarbeitet. Diese unterscheidet zwischen den wesensgebenden \textit{Charakteristika} (z.\,B. Ausrichtung auf den Projekterfolg, kooperative Kultur) und den harten \textit{konstitutiven Modellbestandteilen}. Entscheidend ist hierbei, dass ein Projekt nur dann als IPA-Projekt gilt, wenn alle konstitutiven Modellbestandteile gleichzeitig vorliegen.\autocite[vgl. S. 3]{ipa_zentrum_integrierte_2022}
+
+Um die Beliebigkeit des Begriffs einzuschränken, definiert das IPA-Zentrum eine Liste von konstitutiven Modellbestandteilen. Für die vorliegende Arbeit und das Verständnis von Target Value Design sind insbesondere folgende Elemente hervorzuheben:\autocite[vgl. S. 4--9]{ipa_zentrum_integrierte_2022}
+
+\begin{description}
+    \item[Mehrparteienvertrag]
+    Mindestens der Bauherr, die wichtigsten Planer und die schlüsselfertigen Ausführungsunternehmen schließen einen einzigen, gemeinsamen Vertrag. Dies verhindert die vertraglichen Schnittstellenprobleme der konventionellen Abwicklung.
+
+    \item[Vergütungsmodell und Risikopool]
+    Die Vergütung erfolgt in drei Bausteinen: (1) Die Erstattung der direkten Selbstkosten, (2) ein Gemeinkostenzuschlag und (3) der Gewinn. Der Gewinnanteil ist jedoch nicht garantiert, sondern fließt in einen gemeinsamen Risikopool. Bei Kostenüberschreitungen wird dieser Pool genutzt, um Verluste zu decken („Pain-Share“); bei Unterschreitungen wird der Überschuss an alle ausgezahlt („Gain-Share“).\autocite[vgl. S. 19]{becker_integrierte_2022}
+
+    \item[Open Book Accounting]
+    Transparenz ist zwingend: Alle Kosten müssen offengelegt werden. Ohne diese „gläserne Baustelle“ ist eine gemeinsame Kostensteuerung (TVD) methodisch nicht durchführbar.
+
+    \item[Einstimmigkeitsprinzip]
+    Entscheidungen im Führungsgremium (Senior Management Team) müssen einstimmig getroffen werden. Dies zwingt die Parteien zur Lösungsfindung und verhindert Machtdemonstrationen des Bauherrn.
+
+    \item[Haftungsverzicht]
+    Die Parteien verzichten weitgehend auf gegenseitige Haftungsansprüche bei Fehlern (ausgenommen Vorsatz). Dies fördert eine offene Fehlerkultur, in der Probleme sofort gemeldet statt vertuscht werden.
+\end{description}
+
+Haghsheno et al. ordnen diese vielfältigen Elemente in einem wissenschaftlichen Strukturierungsansatz drei logischen Ebenen zu, die sich gegenseitig bedingen:\autocite[vgl. S. 80]{haghsheno_strukturierungsansatz_2022}
+\begin{enumerate}
+    \item \textbf{Kommerzielle und rechtliche Rahmenbedingungen:} Hierzu zählen der Mehrparteienvertrag und das Anreizsystem (Pain/Gain). Sie bilden das unverzichtbare Gerüst.
+    \item \textbf{Organisation und Kultur:} Dies umfasst die integrierte Teamstruktur und das verhaltensbezogene Mindset („Best for Project“).
+    \item \textbf{Prozesse und Methoden:} Auf dieser operativen Ebene kommen konkrete Werkzeuge zum Einsatz, um die Ziele zu erreichen.
+\end{enumerate}
+
+Diese Einordnung ist zentral für den weiteren Verlauf dieser Arbeit: Während IPA den vertraglichen und kulturellen Rahmen (Ebene 1 und 2) spannt, ist \textbf{Target Value Design} die entscheidende Methode auf der Prozessebene (Ebene 3), um die Kostenziele innerhalb dieses Rahmens aktiv zu steuern.
+
+
+
+
+
+
+
+
+
+
+
+
+% IPA als ist das organisatorische und vertragliche "Betriebssystem", um die Lean-Philosophie in Bauprojekten praktisch umzusetzen.\\
+
+% Schlüsseleigenschaften und IPA-Charakteristika:\\
+% - Frühzeitige Integration aller Schlüsselpartner (Planer und Ausführende) von Beginn an.\\
+% Ein Mehrparteienvertrag, der alle Partner an einen Tisch bindet.\\
+% Ein gemeinsames Risikomanagement (Chancen-/Risikopool).\\
+% Eine kollaborative Kultur und gemeinsame Entscheidungsfindung.\\
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 \subsection{Internationale Erfolge und Status Quo in Deutschland}
@@ -94,8 +177,7 @@ Eine kollaborative Kultur und gemeinsame Entscheidungsfindung.\\
     \fcolorbox{gray!50}{white}{%
         \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax]{05_figures/MacLeamy-Curve.png}%
     }
-    
-    \caption[MacLeamy-Kurve]{MacLeamy-Kurve, die den relativen Grad an Kosten und Aufwand über den Lebenszyklus eines Bauwerks zeigt (Quelle: https://education.buildingsmart.org/de/a-new-way-of-working/).}
+    \caption[MacLeamy-Kurve]{MacLeamy-Kurve, die den relativen Grad an Kosten und Aufwand über den Lebenszyklus eines Bauwerks zeigt. \autocite[]{Quelle: https://education.buildingsmart.org/de/a-new-way-of-working} }
     \label{fig:macleamycurve}
 \end{figure}
 
