--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,32 @@
 
+@book{AIA_2007__integrated,
+	address = {California},
+	title = {Integrated {Project} {Delivery}: {A} {Guide}},
+	publisher = {The American Institute of Architects},
+	author = {AIA},
+	year = {2007},
+}
+
+@techreport{koskela_application_1992,
+	address = {Stanford, CA},
+	title = {Application of the {New} {Production} {Philosophy} to {Construction}},
+	number = {72},
+	institution = {Center for Integrated Facility Engineering (CIFE), Stanford University},
+	author = {Koskela, Lauri},
+	year = {1992},
+	pages = {87},
+}
+
+@inproceedings{ross_introduction_2000,
+	address = {Brisbane, Australia},
+	title = {Introduction to {Project} {Alliancing}},
+	booktitle = {Alliance {Contracting} {Conference}},
+	publisher = {Project Control International},
+	author = {Ross, Jim},
+	year = {2000},
+	pages = {17},
+}
+
 @inproceedings{do_target_2014,
 	address = {Oslo, Norway},
 	title = {Target {Value} {Design} as a {Method} for {Controlling} {Project} {Cost} {Overruns}},
@@ -135,9 +163,6 @@
 	editor = {Seed, William R.},
 	year = {2015},
 	note = {OCLC: 961912818},
-}
-
-@book{noauthor_notitle_nodate,
 }
 
 @misc{team_how_2019,
@@ -314,16 +339,6 @@
 	note = {Publisher: British Medical Journal Publishing Group
 Section: Research Methods \&amp; Reporting},
 	pages = {n71},
-}
-
-@techreport{AIA_2007__integrated,
-	address = {California},
-	title = {Integrated {Project} {Delivery}: {A} {Guide}},
-	language = {en},
-	institution = {The American Institute of Architects},
-	author = {The American Institute of Architects},
-	year = {2007},
-	pages = {62},
 }
 
 @book{mittelstras_enzyklopaphilosophie_2024,
